--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 
       <meta name="description" content="Anonime nonton streaming" />
-      <title>Anonime - Trailer Anonime</title>
+      <title>Anonime - List Popular Anine & Manga</title>
    </head>
    <body>
       <div id="root"></div>
